# batogram

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASES.md  batogram.py  batogram.spec  batogram.spec.keep  mic_response_sample.csv  pyproject.toml  requirements.txt  run-env.sh  run.sh
batogram/: __init__.py  __main__.py  about.py  amplitudegraphframe.py  appsettings.py  appsettingsmodal.py  audiofileservice.py  browseractionsmodal.py  browserframe.py  buttonframe.py  chunky_spectrogram.py  colourmap.py  common.py  constants.py  fileinfoframe.py  frames.py  graphsettings.py  historianservice.py  imagebutton.py  layouts.py  markers.py  modalwindow.py  morebncframe.py  moreframe.py  moreotherframe.py  morerenderingframe.py  morescaleframe.py  moverenamemodal.py  playbackmodal.py  playbackservice.py  profilegraphframe.py  readoutframe.py  rendering.py  renderingservice.py  rootwindow.py  runner.py  spectrogramgraphframe.py  spectrogrammouseservice.py  stegangraphy.py  validatingwidgets.py  (+1 more)
batogram/colour_maps/: CET-L20.csv
docs/: batogram.md  developernotes.md  mic-response.md  technotes.md
src/batogram/: __init__.py  __main__.py  about.py  amplitudegraphframe.py  appsettings.py  appsettingsmodal.py  breadcrumbservice.py  buttonframe.py  colourmap.py  common.py  constants.py  extended-kindlmann-table-byte-1024.csv  fileinfoframe.py  graphsettings.py  kindlmann-table-byte-0256.csv  layouts.py  modalwindow.py  morebncframe.py  moreframe.py  morescaleframe.py  profilegraphframe.py  readoutframe.py  rendering.py  rootwindow.py  spectrogramgraphframe.py  spectrogrammouseservice.py  validatingwidgets.py  wavfileparser.py
src/batogram/colour_maps/: CET-L16.csv  black-body-table-byte-1024.csv  inferno-table-byte-1024.csv  kindlmann-table-byte-1024.csv
src/batogram/samples/: barbar-20220528_215208.wav.REMOVED.git-id  eptser-20220725_215620.wav.REMOVED.git-id  myodau-20220704_220832.wav.REMOVED.git-id  myonat-20220708_22135.wav.REMOVED.git-id  nyclei-20220724_215012.wav.REMOVED.git-id  nycnoc-20220615_215508.wav.REMOVED.git-id  pippip-20230403_201634.wav.REMOVED.git-id  pippyg-20220413_210005.wav.REMOVED.git-id  pleaur-20220923_204957.wav.REMOVED.git-id  rhihip-20220708_221809.wav.REMOVED.git-id
